# BankAccount_DiPietro

./: .gitignore  BankAccount.cpp  BankAccount.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Transaction.cpp  Transaction.h  main.cpp  transferdialog.cpp  transferdialog.h  transferdialog.ui  welcomedialog.cpp  welcomedialog.h  welcomedialog.ui
tests/: testBankAccount.cpp  testTransaction.cpp
